[tool.poetry]
name = "conekta"
description = "Conekta API"
authors = ["Engineering Conekta <engineering@conekta.com>"]
license = "MIT-LICENSE"
readme = "README.md"
repository = "https://github.com/conekta/conekta-python"
keywords = ["OpenAPI", "OpenAPI-Generator", "Conekta API"]

[tool.poetry.dependencies]
python = "^3.7"

urllib3 = ">= 1.25.3"
python-dateutil = ">=2.8.2"
pydantic = "^1.10.5, <2"
aenum = ">=3.1.11"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.1"
tox = ">=3.9.0"
flake8 = ">=4.0.0"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"

[project]
name = "conekta"
authors = [
  { name="Engineering Conekta", email="engineering@conekta.com" },
]
description = "This is a Python library that allows interaction with https://api.conekta.io API."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/conekta/conekta-python"
"Bug Tracker" = "https://github.com/conekta/conekta-python/issues"
